# vae

./: .gitignore  README.md  pyproject.toml
scripts/: train_20newsgroups.py  train_celeba_01_gan.py  train_celeba_02_encoder.py  train_celeba_03_joint.py  train_celeba_04_fid.py  train_gmm.py  train_semhash.py  train_semhash_all.sh
va/: __about__.py  discrete.py  gmm.py  newsgroups.py  semhash.py
va/celeba/: Discriminator.py  Encoder.py  EncoderNoSig.py  Generator.py  GeneratorNoSig.py  discriminator.py  encoder.py  generator.py
