
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vae"
description = "VAE Experiments"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = []
dependencies = ["torch", "torchvision", "wandb", "numpy", "matplotlib"]
dynamic = ["version"]

[tool.hatch.version]
path = "va/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=va --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "va/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
